--- a/login.html
+++ b/login.html
@@ -38,10 +38,10 @@
 
     <button id="signinButton">Sign in with Google</button>
     <script>
-    //   $('#signinButton').click(function() {
-    //     // signInCallback defined in step 6.
-    //     auth2.grantOfflineAccess().then(signInCallback);
-    //   });
+      $('#signinButton').click(function() {
+        // signInCallback defined in step 6.
+        auth2.grantOfflineAccess().then(signInCallback);
+      });
     </script>
     
   </body>
